# MetaFit

./: .env.example  .gitignore  README.md  langgraph.json  pyproject.toml  功能介绍报告.md
backend/data/: FashionDataset.csv  processed_data.csv
backend/eval/: INNOVATION.md  README.md  catalog.py  golden_set.json  metrics.py
backend/eval/results/: eval_20260626_114658.json  eval_20260626_114658.md  eval_20260626_114757.md  latest.json
backend/scripts/: apply_schema.py  import_products_to_db.py  rebuild_index_from_db.py  run_rec_eval.py
backend/src/: config.py  database.py
backend/src/api/: main.py  session_utils.py
backend/src/cstImg/: __init__.py  image_utils.py  laozhang_client.py  router.py  schemas.py  service.py
backend/src/img2model/: __init__.py  pose_normalizer.py  router.py  schemas.py  service.py  task_store.py  tripo_client.py
backend/src/indexing/: data_loader.py  embedding.py
backend/src/recommender/: check_topic_node.py  graph.py  query_rewrite_node.py  rag_node.py  ranker_node.py  self_query_node.py  state.py  utils.py
backend/src/services/: auth_service.py  vector_index_service.py
backend/src/util/: image_helpers.py
frontend/src/: index.html
frontend/src/css/: common.css  styles.css
frontend/src/fitting-room/: index.html
frontend/src/js/: api.js  auth.js  cart-api.js  coins-api.js  config.js  fallback-storage.js  main.js  player.js  scene.js  ui-auth.js  ui.js
frontend/src/merchant/: index.html
frontend/src/shared/: auth-ui.js  auth.js  cart-api.js  catalog-api.js  coins-api.js  config.js  nav.js  (+2 more)
sql/: matefit.sql  metafit.sql
(+26 files in other folders)
